--- a/views/layout.html
+++ b/views/layout.html
@@ -8,10 +8,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <title>ADHD Medication Tracker</title>
     <style>
         body {
             font-family: Arial;
+            /* Centering the terminal and adding background image */
+            align-items: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            background: url(https://www.pexels.com/photo/flat-lay-photo-of-alternative-medicines-7615562/) no-repeat center center/cover;
         }
 
         /**
