--- a/views/layout.html
+++ b/views/layout.html
@@ -13,8 +13,7 @@
         body {
             font-family: Arial;
             /* Centering the terminal and adding background image */
-            background: url("https://www.pexels.com/photo/flat-lay-photo-of-alternative-medicines-7615562") no-repeat 50% 50%;
-            background-size: cover;
+            background: url("https://images.pexels.com/photos/7615566/pexels-photo-7615566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2") no-repeat center center/cover;
             align-items: center;
             height: 100vh;
             display: flex;
